<resources>
    <string name="app_name">QA - Process Controller v0.03</string>
    <string name="companyname">I-Team</string>
    <string name="companydescription">Factory 5.0 solution development Company</string>
    <string name="add_proc_controller_on_tablet">Add Proc. controller on tablet</string>
    <string name="loginname">loginname?</string>
    <string name="add_a_webaddress">Add a Webaddress</string>
    <string name="webaddress">Webaddress?</string>
    <string name="name_and_password">Name and password</string>
    <string name="password">password?</string>
    <string name="login">Login</string>
    <string name="sysadmin">Sysadmin</string>
    <string name="about">About</string>
    <string name="machine_id">Machine ID</string>
    <string name="process_controller">Process Controller</string>
    <string name="all_unresolved_tasks">All unresolved tasks</string>
    <string name="unresolved_tasks_by_line">Unresolved tasks by line</string>
    <string name="unresolved_tasks_by_operator">Unresolved tasks by operator</string>
    <string name="qr_scan">QR Scan</string>
    <string name="all_resolved_tasks">All resolved tasks</string>
    <string name="resolved_tasks_by_line">Resolved tasks by line</string>
    <string name="resolved_tasks_by_operator">Resolved tasks by operator</string>
    <string name="switch_process_controller">Switch Process Controller</string>
    <string name="pick_one_line_by_click_on_it">Pick one line by click on it</string>
    <string name="process_controller_main">Process controller main</string>
    <string name="main_screen">Main screen</string>
    <string name="tablet_process_controller">Tablet Process controller</string>
    <string name="name">name?</string>
    <string name="update_api_webaddress">Update API Webaddress</string>
    <string name="webaddress_for_api">webaddress for API</string>
    <string name="description">description…</string>
    <string name="mark_as_active">Mark as active</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="new_task">New task</string>
    <string name="exit">Exit</string>
    <string name="save">Save</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="process_controller_name">process controller name</string>
    <string name="is_active">Is active</string>
    <string name="web_api_address">Web API address</string>
    <string name="_192_168_11_3">192.168.11.3</string>
    <string name="scoring_general">Scoring general</string>
    <string name="scoring_by_operation">Scoring by Operation</string>
    <string name="update_available_title">Update available</string>
    <string name="update_available_message">Version %1$s is available.\nDo you want to update the application?</string>
    <string name="update_btn_update">Update</string>
    <string name="update_btn_later">Later</string>
    <string name="update_downloading_title">Updating to version %1$s</string>
    <string name="update_downloading_message">Downloading update, please wait...</string>
    <string name="update_install_permission">Enable \'Install unknown apps\' for QA, then restart the application.</string>
    <string name="update_download_error">Download error: %1$s</string>
</resources>