<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".ProcessController.ProcesscontrollermainActivity">

    <!-- https://developer.android.com/reference/androidx/constraintlayout/widget/ConstraintLayout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/process_controller"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/button_unresolvedtasks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/all_unresolved_tasks"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

        <Button
            android:id="@+id/button_unresolvedbyline"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/unresolved_tasks_by_line"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

        <Button
            android:id="@+id/button_unresolvedbyoperator"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/unresolved_tasks_by_operator"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />


        <Button
            android:id="@+id/button_qrscan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/qr_scan"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />


        <View style="@style/Divider.Horizontal"
            android:layout_marginTop="15dp"/>


        <Button
            android:id="@+id/button_allresolvedtasks"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/all_resolved_tasks"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

        <Button
            android:id="@+id/button_resolvedbyline"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/resolved_tasks_by_line"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

        <Button
            android:id="@+id/button_resolvedbyoperator"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/resolved_tasks_by_operator"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />


        <View style="@style/Divider.Horizontal"
            android:layout_marginTop="15dp"/>


        <Button
            android:id="@+id/button_processcontroller"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorRed"
            android:text="@string/switch_process_controller"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

        <View style="@style/Divider.Horizontal"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/button_mainactivity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/main_screen"
            android:textAllCaps="false"
            android:textColor="@color/colorLight"
            />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>